--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "css-loader": "^6.8.1",
+    "gh-pages": "^6.1.1",
     "html-loader": "^4.2.0",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.7.6",
