--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
-    "dev": "webpack serve",
-    "build": "rm -rf dist && webpack --mode production",
+    "start": "webpack-dev-server --config webpack.dev.js",
+    "watch": "webpack --watch",
+    "build": "webpack --config webpack.prod.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
     "test": "jest",
@@ -13,10 +14,12 @@
     "gh-pages": "^6.1.1",
     "html-loader": "^4.2.0",
     "jest": "^29.7.0",
+    "merge": "^2.1.1",
     "mini-css-extract-plugin": "^2.7.6",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "webpack-merge": "^5.10.0"
   },
   "dependencies": {
     "@babel/cli": "^7.23.4",
