--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "webpack serve --open --config webpack.dev.js",
+    "start": "webpack serve --config webpack.dev.js",
     "watch": "webpack --watch",
     "build": "webpack --config webpack.prod.js",
     "predeploy": "npm run build",
