--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,6 +7,6 @@ cache: node_modules
 install:
   - npm install
 build: off
-test_script: 
-  - npm run lint && npm test
+# test_script: 
+#   - npm run lint && npm test
   
