--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "^8.1.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
     "html-webpack-plugin": "^5.6.0",
     "live-server": "^1.2.2",
     "yarn": "^1.22.21"
