--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "core-js": "^3.34.0",
-    "eslint": "^8.1.0",
+    "eslint": "^8.27.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-prettier": "^5.1.3",
     "html-webpack-plugin": "^5.6.0",
