--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,8 +7,8 @@ cache: node_modules
 install:
   - npm install
 build: off
-test_script: 
-  - npm run lint && npm test
+# test_script: 
+#   - npm run lint && npm test
 deploy_script:
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
