--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,17 +1,37 @@
-image: Ubuntu2204
-stack: node 21.7.2
+image: Ubuntu2204           # образ для сборки
+
+stack: node 21.7.2          # окружение
+
 branches:
   only:
-    - main
+    - gh-pages
+    - main                  # ветка git
+
 cache: node_modules
+
 install:
-  - npm install
-build: off
-# test_script: 
-#   - npm run lint && npm test
-deploy_script:
+  - yarn                    # команда установки зависимостей
+
+build: off                  # отключаем встроенную в appveyor систему сборки
+
+build_script:
+  - yarn build              # команда сборки
+
+test_script:
+  - yarn lint && yarn test  # скрипт тестирования
+
+deploy_script:              # скрипт развёртывания
   - git config --global credential.helper store
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx push-dir --dir=dist --branch=gh-pages --force --verbose
+  - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
+
+
+
+
+
+
+
+
+
